# codex-quality-gate

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  bootstrap.py  config.example.json  install.ps1  install.sh  pyproject.toml
.github/workflows/: quality.yml  release.yml
examples/: chat-message-examples.json  latest.json  project-config.json  semgrep.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/electron/: main.cjs  preload.cjs
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AuditTable.tsx  ChatActivityPanel.tsx  FindingsTable.tsx  PolicyBadge.tsx  ProjectStatusTable.tsx  RunTimeline.tsx  SeverityBadge.tsx  SummaryCards.tsx  UpdateStatusPanel.tsx
frontend/src/pages/: AuditLog.tsx  ChatBridge.tsx  Dashboard.tsx  Findings.tsx  ProjectDetails.tsx  Projects.tsx  ResourcePage.tsx  Rules.tsx  Runs.tsx  Settings.tsx  Sources.tsx  Updates.tsx
frontend/src/styles/: app.css
frontend/test/: app-structure.test.mjs  electron-shell.test.mjs
src/codex_quality_gate/: __init__.py  __main__.py  cli.py  constants.py  release_automation.py
tests/: test_ai_codex_checks.py  test_audit_coverage.py  test_audit_log.py  test_audit_regressions.py  test_bootstrapper.py  test_chat_bridge.py  test_cli.py  test_dashboard_api.py  test_database.py  test_dependency_checks.py  test_desktop_packaging.py  test_file_scanner.py  test_final_blocker_regressions.py  test_frontend_gate.py  test_git_diff_checks.py  test_global_audit_fixes.py  test_install_plan.py  test_js_ts_checks.py  test_language_detector.py  test_module_coverage.py  test_multi_project_checks.py  test_platform_update_sources.py  test_policies.py  test_project_lock.py  test_project_profiler.py  test_project_registry.py  test_python_checks.py  test_release_automation.py  test_release_workflow.py  test_repeat_audit_fixes.py  test_reports.py  test_rule_engine.py  test_rules_schema.py  test_security_checks.py  test_tool_catalog.py  test_update_client.py  test_update_security.py  test_update_sources.py  test_updater_checks.py
tools/: build_desktop.py  desktop_dashboard_api.py
(+138 files in other folders)
