[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-quality-gate"
version = "0.1.0"
description = "Autonomous multi-project quality gate for AI and Codex-generated code."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "belas"}]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "pydantic>=2",
  "requests>=2.32",
  "cryptography>=42",
  "packaging>=24",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "sqlalchemy>=2",
  "python-dotenv>=1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-mock>=3",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3",
  "semgrep>=1.75",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "types-requests>=2.32",
  "build>=1.2",
]

[project.scripts]
codex-quality-gate = "codex_quality_gate.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_quality_gate = ["py.typed", "data/*.json", "data/*.yml"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["src/codex_quality_gate/data/default_rules.json"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "B",
  "UP",
  "SIM",
  "ARG",
  "PL",
  "RUF",
  "S",
  "C4",
  "DTZ",
  "PIE",
  "RET",
  "TRY",
]
ignore = [
  "S101",
  "S603",
  "S607",
  "TRY003",
  "EM101",
  "EM102",
  "PLR2004",
  "PLR0913",
  "PLR0911",
  "PLR0912",
  "PLR0915",
  "PLC0415",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["tests", "frontend", "tools"]

[[tool.mypy.overrides]]
module = ["fastapi.*", "typer.*", "rich.*", "uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:Warning",
]

[tool.coverage.run]
branch = true
source = ["codex_quality_gate"]

[tool.coverage.report]
fail_under = 85
show_missing = true
omit = ["src/codex_quality_gate/data/*"]
